# esl

./: .gitignore  west.yml
.devcontainer/: Dockerfile  devcontainer.json  west.yml
.devcontainer/scripts/: setup-env.sh  west-cache.sh
fw/: CMakeLists.txt  Kconfig  prj.conf
fw/boards/: native_posix.conf  native_posix.overlay
fw/boards/arm/esl/: Kconfig  Kconfig.board  Kconfig.defconfig  board.cmake  esl.dts  esl.yaml  esl_defconfig
fw/dts/bindings/: epd-spi.yaml  uart-epd.yaml
fw/src/: adc.c  epd_driver.c  epd_lut.h  epd_main.c  epd_main.h  epd_regs.h  epd_serial.c  flash.c  framebuffer.c  framebuffer.h  main.c  splash.h  utils.h
